@startuml

title 对象适配器模式类图

class Target {
    + void request()
}

class Adaptee {
    + void specificRequest();
}

class Adapter {
    + void request()
}

note right of Adapter
public void request() {
    adaptee.specificRequest();
}
end note

Adapter --|> Target
Adapter ..> Adaptee

class Client

Client ..> Target

@enduml